shared_memory_derive/tests/ui/vec.stderr
error[E0277]: the trait bound `std::vec::Vec<u32>: shared_memory::cast::SharedMemCast` is not satisfied
 --> $DIR/vec.rs:7:8
  |
7 |     x: Vec<u32>,
  |        ^^^ the trait `shared_memory::cast::SharedMemCast` is not implemented for `std::vec::Vec<u32>`
  |
  = note: required by `shared_memory::cast::AssertIsSharedMemCast`

error[E0277]: the trait bound `std::vec::Vec<u32>: shared_memory::cast::SharedMemCast` is not satisfied
  --> $DIR/vec.rs:11:22
   |
11 | pub struct MyStruct2(Vec<u32>);
   |                      ^^^ the trait `shared_memory::cast::SharedMemCast` is not implemented for `std::vec::Vec<u32>`
   |
   = note: required by `shared_memory::cast::AssertIsSharedMemCast`

error[E0277]: the trait bound `&'a [u32]: shared_memory::cast::SharedMemCast` is not satisfied
  --> $DIR/vec.rs:15:8
   |
15 |     x: &'a [u32],
   |        ^
   |        |
   |        the trait `shared_memory::cast::SharedMemCast` is not implemented for `&'a [u32]`
   |        help: consider removing 1 leading `&`-references
   |
   = help: the following implementations were found:
             <[T; 1024] as shared_memory::cast::SharedMemCast>
             <[T; 1048576] as shared_memory::cast::SharedMemCast>
             <[T; 1073741824] as shared_memory::cast::SharedMemCast>
             <[T; 10] as shared_memory::cast::SharedMemCast>
           and 55 others
   = note: required by `shared_memory::cast::AssertIsSharedMemCast`

error[E0277]: the trait bound `&'a [u32]: shared_memory::cast::SharedMemCast` is not satisfied
  --> $DIR/vec.rs:19:31
   |
19 | pub struct MyStruct2Array<'a>(&'a [u32]);
   |                               ^
   |                               |
   |                               the trait `shared_memory::cast::SharedMemCast` is not implemented for `&'a [u32]`
   |                               help: consider removing 1 leading `&`-references
   |
   = help: the following implementations were found:
             <[T; 1024] as shared_memory::cast::SharedMemCast>
             <[T; 1048576] as shared_memory::cast::SharedMemCast>
             <[T; 1073741824] as shared_memory::cast::SharedMemCast>
             <[T; 10] as shared_memory::cast::SharedMemCast>
           and 55 others
   = note: required by `shared_memory::cast::AssertIsSharedMemCast`

For more information about this error, try `rustc --explain E0277`.
